This fixes an overlap issue with the navbar causing broken links.

--- a/refinery/static/source/styles/less/refinery-style.less
+++ b/refinery/static/source/styles/less/refinery-style.less
@@ -107,9 +107,11 @@ ol, ul {
   border-radius: 0;
 }
 
-.collapse.navbar-collapse {
+.navbar-collapse.collapse {
   height: auto;
   overflow: visible;
+  width: 450px;
+  float: left;
 }
 
 .collapse {
@@ -640,6 +642,7 @@ a.analysis-header{
 
 
 @media (max-width: @navbar-collapse-width) {
+
   .navbar-fixed-top,
   .navbar-fixed-bottom {
     padding: 0px;
